--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -102,5 +102,50 @@ Nous avons cherché à remplacer H par des \textbf{formules connues de champ mag
 Cependant, ce ne sont que des cas spécifiques, et pour résoudre cette équation pour un cas général, il nous faut là également utiliser des méthodes de résolutions numériques (dichotomie, Newton, Point Fixe...).
 \newline
 On a commencé à être en place les résolutions numériques (dichotomie et Point Fixe), et vérifier que ces méthodes peuvent être utilisées sur la fonction étudiée. On a aussi cherché à insérer les différents champs spécifiques dans notre équation pour y retrouver une fonction permettant de retrouver la hauteur. Il faut cependant passer des coordonnées cylindriques à la situation simplifiée que l'on a actuellement.
+
+\section{Travail de Mathieu et Léo-Paul}
+Léo-Paul s'est assuré dans un premier temps que les différentes méthodes de résolution numérique étaient applicables sur notre équation, notamment la méthode de Nexton. Pour cette méthode, il faut vérifier que la dérivée ne s'annule pas, peu importe le x. Une fois que cela est fait, il a pu implémenter toutes les méthodes de résolution, à savoir \textbf{la dichotomie, le point fixe de Picard et la méthode de Newton}.
+\newline
+Mathieu a commencé par implémenter les différents champs que l'on peut retrouver dans notre situation, plus spécialement les champs qui admettent \textbf{une invariance en y} (afin de n'avoir que x et z comme inconnues). On s'est finalement penché sur les 3 cas suivant : la nappe de courant, les deux fils à courant inversé et le dipole magnétique.
+\newline
+La nappe de courant est le champ le plus simple à mettre en place, car si on envoie le courant selon Oy, alors on n'a un \textbf{champ qui ne dépend que de z}. L'équation implémenté est la suivante : 
+
+\begin{equation}
+H(M) = \frac{jS}{2}\vec{u_{z}}
+\label{eq08}
+\end{equation}
+\begin{figure}[h]
+	\centering
+    \includegraphics[width=.5\linewidth]{Nappe.png}
+    
+\end{figure}
+\newpage
+
+Les deux fils à courant sont plus complexes à définir, car leur champ est la plupart du temps donné dans des coordonnées cylindriques, et nous voulons les implémenter en coordonnées cartésiennes. Encore une fois, on fait en sorte d'avoir une \textbf{invariance en y}. Cela nous donne les formules suivantes :
+
+\begin{equation}
+H_{x}=\frac{-1}{\pi}pI\frac{2xz}{(x^2-y^2-p^2)^2+4x^2y^2} \indent\indent  H_{z}=\frac{-1}{\pi}pI\frac{x^2-y^2-p^2}{(x^2-y^2-p^2)^2+4x^2y^2}
+\label{eq09}
+\end{equation}
+\begin{equation}
+p = \sqrt{\frac{d^2}{4} - r^2} \indent\indent |H| = \sqrt{H_{x}^2+H_{z}^2}
+\label{eq10}
+\end{equation}
+\begin{figure}[h]
+	\centering
+    \includegraphics[width=.4\linewidth]{Fils.png}
+    \includegraphics[width=.4\linewidth]{Fils2.png}
+\end{figure}
+
+Pour implémenter le dipôle magnétique, j'utilise la formule en carthésien suivante en considérant $m = IS$ :
+\begin{equation}
+H_{x} = \frac{m}{4\pi}\frac{3zx}{r^5}\indent\indent H_{y} = \frac{m}{4\pi}\frac{3zy}{r^5}\indent\indent H_{z}=\frac{m}{4\pi}\frac{1}{r^3}[\frac{3z^2}{r^2} - 1]
+\end{equation}
+En rappelant \textbf{$r = \sqrt{x^2 + y^2 +z^2}$}
+\begin{figure}[h]
+	\centering
+    \includegraphics[width=.5\linewidth]{Dipole.png}
+    
+\end{figure}
 \end{document}
    
